--- a/static/img/style.css
+++ b/static/img/style.css
@@ -1,3 +1,12 @@
 .island-map img{
   vertical-align: bottom;
 }
+.name {
+  color: #a06040;
+}
+.input div {
+  font-weight: bold;
+}
+.login .main div {
+  display: table-cell;
+}
